--- a/LocalEditor/packages.config
+++ b/LocalEditor/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="HtmlAgilityPack" version="1.8.4" targetFramework="net462" />
+  <package id="System.Json" version="4.5.0" targetFramework="net462" />
 </packages>
