--- a/LocalEditor/packages.config
+++ b/LocalEditor/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="HtmlAgilityPack" version="1.8.4" targetFramework="net462" />
   <package id="System.Json" version="4.5.0" targetFramework="net462" />
+  <package id="YandexTranslateCSharpSdk" version="1.1.0" targetFramework="net472" />
 </packages>
